2008-11-20 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Handle adding repeating records.
	* src/gui/widgets/datepicker.py: Emmit signal when data is changed.
	* src/gui/maindialog.py: Code cleanup; update endDate when dueDate is changed.
	* src/lib/scheduler.py: Code cleanupand improvements for date handling functions.

2008-11-19 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Make 'notes' widget scroll when number of lines go beyond the widget's
	 height. Fixes b.g.o #561550.

2008-11-18 Og Maciel <ogmaciel@gnome.org>

	* src/gui/categoriesdialog.py: Only select an item if we have data.
	* src/gui/adddialog.py: toggle widgets sensibility based on presence
	 of passed record or not; Added DatePicker widgets for Due Date
	 and End Date; Set the date for DatePicker using the set_date method;
	 Select date from DatePicker widget using get_date method; Handle 
	 endDateLabel sensitivity based on selection of frequency.
	* gui/widgets/datepicker.py: Added get/set_date methods; Check day_selected
	 event and update currentDate/label;

2008-11-17 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Fixed optional fields section for better alignment.

2008-11-16 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Use new DatePicker widget and get rid of gtk.Calendar.
	* src/gui/widgets/datepicker.py: New widget that lets you choose a date from a dropdown calendar.
	* src/gui/widgets/Makefile.am: Added datepicker.py.
	* src/gui/maindialog.py:
	* po/pt_BR.po: Updated the catalog.
	* po/POTFILES.in: Added datepicker.py.
	* po/billreminder.pot: Updated the catalog.

2008-10-23 Og Maciel <ogmaciel@gnome.org>

	* src/gui/aboutdialog.py: Use gnomevfs for url_show method.
	* src/daemon/main.py, src/lib/dal.py, configure.ac: Don't try to import 
	pysqlite2 in python 2.5. Patch by John Millikin (Fixes Bug: #555136).

2008-10-17 Og Maciel <ogmaciel@gnome.org>
